--- a/src/main/resources/ucf/assignments/Display.fxml
+++ b/src/main/resources/ucf/assignments/Display.fxml
@@ -1,39 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
 <!--
-*  UCF COP3330 Fall 2021 Assignment 4 Solution
-*  Copyright 2021 Yeshwanth Mandava
--->
+  ~ UCF COP3330 Fall 2021 Assignment Solution
+  ~ Copyright 2021 Yeshwanth Mandava
+  -->
 
 <BorderPane prefHeight="498.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.TodoController">
     <center>
-        <AnchorPane BorderPane.alignment="CENTER">
+        <AnchorPane maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
             <children>
-                <TableView accessibleRole="CONTEXT_MENU" editable="true" prefHeight="449.0" prefWidth="396.0" snapToPixel="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                        <TableColumn maxWidth="500.0" minWidth="130.0" prefWidth="-1.0" text="Due Date" />
-                        <TableColumn maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="280.0" text="Task Todo" />
-                        <TableColumn maxWidth="200.0" minWidth="100.0" prefWidth="-1.0" text="Complete" />
-                    </columns>
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                    </columnResizePolicy>
-                </TableView>
+                <VBox maxHeight="1.7976931348623157E308" prefHeight="423.5" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <AnchorPane maxHeight="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                            <children>
+                                <TableView fx:id="table" accessibleRole="CONTEXT_MENU" editable="true" maxHeight="1.7976931348623157E308" prefWidth="667.0" snapToPixel="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <columns>
+                                        <TableColumn fx:id="dueDateSection" maxWidth="500.0" minWidth="120.0" prefWidth="-1.0" text="Due" />
+                                        <TableColumn fx:id="todoDescription" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="280.0" text="Tasks Todo" />
+                                        <TableColumn fx:id="completedColumn" maxWidth="200.0" minWidth="100.0" prefWidth="-1.0" text="Complete" />
+                                    </columns>
+                                    <columnResizePolicy>
+                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                    </columnResizePolicy>
+                                </TableView>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane maxHeight="50.0" prefHeight="50.0">
+                            <children>
+                                <GridPane alignment="BOTTOM_CENTER" prefHeight="50.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="100.0" prefWidth="180.0" />
+                                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="38.0" />
+                                        <ColumnConstraints halignment="RIGHT" hgrow="NEVER" maxWidth="64.0" minWidth="64.0" percentWidth="0.0" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                                    <children>
+                                        <Button mnemonicParsing="false" onAction="#AddTaskClick" text="Add" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+                                        <DatePicker fx:id="selectDueDate" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                            <GridPane.margin>
+                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                            </GridPane.margin>
+                                        </DatePicker>
+                                        <TextField fx:id="todoInput" promptText="Add a task" GridPane.columnIndex="1" />
+                                    </children>
+                                </GridPane>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </VBox>
             </children>
         </AnchorPane>
     </center>
@@ -42,76 +75,35 @@
             <menus>
                 <Menu mnemonicParsing="false" text="File">
                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#AddListClick" text="New List" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#loadFile" text="Load File" />
-                        <MenuItem mnemonicParsing="false" onAction="#loadList" text="Load List" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#saveFile" text="Save File" />
-                        <MenuItem mnemonicParsing="false" onAction="#saveList" text="Save List" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#Quit" text="Quit" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#AddListClick" text="New List" />
-                        <MenuItem mnemonicParsing="false" onAction="#NewTaskClick" text="New Todo" />
+                        <MenuItem mnemonicParsing="false" onAction="#AddTaskClick" text="New Todo" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#DelTaskClick" text="Delete Todo" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" onAction="#DelListClick" text="Delete List" />
-                        <MenuItem mnemonicParsing="false" onAction="#DelTaskClick" text="Delete Todo" />
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="View">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#ShowCompleteClick" text="Show Completed" />
-                        <MenuItem mnemonicParsing="false" onAction="#ShowIncompleteClick" text="Show Incomplete" />
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#DisplayAllClick" text="All" />
+                        <MenuItem mnemonicParsing="false" onAction="#ShowCompleteClick" text="Complete" />
+                        <MenuItem mnemonicParsing="false" onAction="#ShowIncompleteClick" text="Incomplete" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
     </top>
     <left>
-        <AnchorPane BorderPane.alignment="CENTER">
-            <children>
-                <TitledPane alignment="CENTER" animated="false" collapsible="false" prefHeight="470.5" prefWidth="292.5" text="Lists" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <content>
-                        <AnchorPane>
-                            <children>
-                                <ListView editable="true" fixedCellSize="30.0" layoutX="-31.0" layoutY="52.0" prefHeight="421.0" prefWidth="269.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </TitledPane>
-            </children>
-        </AnchorPane>
+        <AnchorPane BorderPane.alignment="CENTER" />
     </left>
-    <bottom>
-        <GridPane BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="148.0" minWidth="100.0" prefWidth="145.0" />
-                <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="141.0" minWidth="91.0" prefWidth="94.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="38.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="139.0" minWidth="122.0" prefWidth="137.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="136.0" minWidth="123.0" percentWidth="0.0" prefWidth="125.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="NEVER" maxWidth="100.0" minWidth="120.0" percentWidth="0.0" />
-                <ColumnConstraints halignment="RIGHT" hgrow="NEVER" maxWidth="100.0" minWidth="90.0" percentWidth="0.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Button mnemonicParsing="false" onAction="#NewTaskClick" text="Add Task" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
-                <Button layoutX="370.0" layoutY="17.0" mnemonicParsing="false" onAction="#DelTaskClick" text="Delete Task" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#ShowCompleteClick" text="Show Completed" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                <Button mnemonicParsing="false" onAction="#ShowIncompleteClick" text="Hide Completed" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                <Button mnemonicParsing="false" onAction="#AddListClick" text="Add List" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
-                <Button mnemonicParsing="false" onAction="#DelListClick" text="Delete List" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
-            </children>
-        </GridPane>
-    </bottom>
 </BorderPane>
